@@ -35,7 +35,7 @@ static void init()
   if (client==NULL && arg_mondemand_host!=NULL && arg_mondemand_ip!=NULL)
     {
       struct mondemand_transport *transport = NULL;
-      client = mondemand_client_create("lwes-journaller");
+      client = mondemand_client_create(arg_mondemand_program_id);
       mondemand_set_context(client,"host",arg_mondemand_host);
       transport = mondemand_transport_lwes_create(arg_mondemand_ip,arg_mondemand_port,NULL,0,0);
       if (transport)
